# Signature-schemes

./: README.md
bls-signatures/: Cargo.toml
bls-signatures/examples/: aggregation_time.rs  verify_example.rs
bls-signatures/src/: key.rs  lib.rs  main.rs  sig_aggregate.rs
bls-signatures/src/curve/: bls12381.rs  mod.rs
eddsa/: Cargo.toml
eddsa/benches/: ed25519_benchmarks.rs
eddsa/src/: batch.rs  main.rs
